:zap: Updating AsyncStorage library and imports statement.

--- a/packages/amazon-cognito-identity-js/package.json
+++ b/packages/amazon-cognito-identity-js/package.json
@@ -86,7 +86,8 @@
     "eslint-plugin-standard": "^3.0.1",
     "jsdoc": "^3.4.0",
     "react": "^16.0.0",
-    "react-native": "^0.44.0",
+    "react-native": "^0.63.3",
+    "@react-native-community/async-storage": "1.8.1",
     "rimraf": "^2.5.4",
     "webpack": "^3.5.5"
   },
